add REST API for templates
adding new templates, updating and removing
set templatename when adding/updating a role